# Reconstruction

./: .gitignore
Data/: 1-preview.usdz  reconstruction.ply  transforms.json
Data/camera_calibration/: CMakeLists.txt  calibration.dylib  libcalibration.dylib  main.cpp
OpenSplat_zyx/OpenSplat/: constants.swift  cv_utils.swift  input_data.swift  kdtree_tensor.swift  model.swift  nerfstudio.swift  optim_scheduler.swift  point_io.swift  project_gaussians.swift  rasterize_gaussians.swift  spherical_harmonics.swift  ssim.swift  tensor_math.swift  utils.swift
OpenSplat_zyx/OpenSplat.xcodeproj/: project.pbxproj
OpenSplat_zyx/OpenSplat/Backend/: constants.swift  cv_utils.swift  model.swift  opensplat.swift  optim_scheduler.swift  point_io.swift  project_gaussians.swift  rasterize_gaussians.swift  spherical_harmonics.swift  ssim.swift  tile_bounds.swift
OpenSplat_zyx/OpenSplat/Frontend/: SettingsView.swift
ReconstructionApp/ObjectCaptureReconstruction.xcodeproj/: project.pbxproj
ReconstructionApp/ReconstructionApp/: AppDataModel.swift  ContentView.swift  ReconstructionApp.swift  ThumbnailView.swift
ReconstructionApp/ReconstructionApp.xcodeproj/: project.pbxproj
ReconstructionApp/Wrappers/: OpenCVWrapper.mm
ReconstructionApp_UI_zyx/ReconstructionApp.xcodeproj/: project.pbxproj
ReconstructionApp_zyx/ReconstructionApp/: AppDataModel.swift  ImageHelper.swift
ReconstructionApp_zyx/Wrappers/: PrefixHeader.pch
Reconstruction_zyx/Reconstruction_zyx/: main.swift
Reconstruction_zyx/Reconstruction_zyx.xcodeproj/: project.pbxproj
(+49 files in other folders)
